preventing overflow in pre elements, as per Florian Rivoal

--- a/remedy.css
+++ b/remedy.css
@@ -62,6 +62,11 @@ p {
 }
 
 
+pre { 
+	white-space:pre-wrap; /* Overflow by default is bad. */
+}
+
+
 /* are browsers now consistent with margin & padding on lists?
 	See: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Lists_and_Counters/Consistent_list_indentation  */
 nav ul {
